...
        app:layout_constraintBottom_toBottomOf="@+id/word_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/mSearch"

        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/word_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerItemStyle"
            android:entries="@array/words_per_session_array"
            android:spinnerMode="dropdown" />

...
